--- a/src/app/components/notice/notice.component.css
+++ b/src/app/components/notice/notice.component.css
@@ -1,18 +1,17 @@
 .botones-grid {
     display: grid;
-    gap: 1rem;
-    padding: 1rem;
+    gap: 10px;
+    padding: 10px;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
 }
 
 .btn-noticia {
     background: linear-gradient(135deg, #f44336, #e91e63);
     color: white;
-    font-size: 1.5rem;
-    padding: 1.5rem 2rem;
+    font-size: 30px;
+    padding: 50px 100px;
     border: none;
     border-radius: 12px;
-    cursor: pointer;
     box-shadow: 0 6px 15px rgba(244, 67, 54, 0.5);
     transition: transform 0.3s ease, box-shadow 0.3s ease;
     font-weight: bold;
@@ -22,7 +21,6 @@
 .btn-noticia:focus {
     transform: translateY(-6px) scale(1.05);
     box-shadow: 0 12px 25px rgba(233, 30, 99, 0.7);
-    outline: none;
 }
 
 .btn-noticia:active {
@@ -32,7 +30,7 @@
 
 @media (max-width: 600px) {
     .btn-noticia {
-        font-size: 1.2rem;
-        padding: 1rem 1.5rem;
+        font-size: 30px;
+        padding: 50px 100px;;
     }
 }
