--- a/src/app/components/slider/slider.component.css
+++ b/src/app/components/slider/slider.component.css
@@ -1,27 +1,23 @@
 .slider-container {
     display: flex;
-    align-items: center;
-    justify-content: center;
     gap: 1rem;
-    max-width: 900px;
+    max-width: 100%;
     margin: auto;
     padding: 1rem;
     position: relative;
-    overflow: hidden;
 }
 
 .slides-wrapper {
     display: flex;
-    overflow: hidden;
-    width: 100%;
+    justify-content: center;
+    align-items: center;
+    max-width: 60dvh;
+    display: flex;
     position: relative;
     height: 220px;
 }
 
 .slide {
-    min-width: 100%;
-    flex-shrink: 0;
-    padding: 1rem 2rem;
     background: #2196f3;
     color: white;
     border-radius: 12px;
@@ -29,8 +25,7 @@
     opacity: 0;
     transform: translateX(100%);
     transition: transform 0.5s ease, opacity 0.5s ease;
-    display: flex;
-    flex-direction: column;
+ 
     justify-content: center;
 }
 
